fix: improve contrast for link in dark mode

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,7 +25,7 @@
   }
 
   a {
-    @apply text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-500;
+    @apply text-blue-700 hover:text-blue-900 dark:text-yellow-400 dark:hover:text-yellow-500;
   }
 
   a[href].direct-link,
